<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".EditProduct">


    <Space
        android:layout_width="400dp"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Edit_product"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#6F6F6F"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="------"
                android:textColor="#6F6F6F"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/edit_imageView"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:adjustViewBounds="false"
                    android:background="#C3C3C3"
                    android:foregroundGravity="center"
                    android:paddingLeft="1dp"
                    android:paddingTop="1dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="1dp"
                    app:srcCompat="@drawable/camera" />

            </LinearLayout>

            <Button
                android:id="@+id/retake_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#00BCD4"
                android:text="@string/retake_picture"
                android:textColor="#FFFFFF" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Name_"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#9E9E9E"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/edit_productName"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:inputType="textUri" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/Description_"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#9E9E9E"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/edit_productdescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/Price_"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#9E9E9E"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/edit_productPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/Quantity"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#9E9E9E"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/edit_prouductQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#63D368"
                android:text="@string/Save_changes"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>