<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="30dp"
    android:orientation="vertical"
    android:paddingLeft="1dp"
    android:paddingTop="1dp"
    android:paddingRight="1dp"
    android:paddingBottom="1dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/growth" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Summary"
                android:textColor="#00BCD4"
                android:textSize="26sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="------"
                android:textColor="#00BCD4"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/analytics" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Purchased_products"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#787878"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView

                    android:id="@+id/purchased_products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#6F6F6F"
                    android:textSize="16sp"
                    android:typeface="sans" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="--------------------------------------------------------"
                android:textColor="#9E9E9E"
                android:textSize="18sp"
                android:typeface="sans" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/analytics" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/My_products"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#787878"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView

                    android:id="@+id/my_products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#6F6F6F"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="--------------------------------------------------------"
                android:textColor="#9E9E9E"
                android:textSize="18sp"
                android:typeface="sans" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/analytics" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Total_profit"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#787878"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView

                    android:id="@+id/total_profit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#6F6F6F"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="--------------------------------------------------------"
                android:textColor="#9E9E9E"
                android:textSize="18sp"
                android:typeface="sans" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/analytics" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Total_spend"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#787878"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView

                    android:id="@+id/total_spend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#6F6F6F"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="--------------------------------------------------------"
                android:textColor="#9E9E9E"
                android:textSize="18sp"
                android:typeface="sans" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/analytics" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Total_likes"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#787878"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView

                    android:id="@+id/total_likes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#6F6F6F"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="--------------------------------------------------------"
                android:textColor="#9E9E9E"
                android:textSize="18sp"
                android:typeface="sans" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/analytics" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Total_unlikes"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#787878"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView

                    android:id="@+id/total_unlikes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#6F6F6F"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>